[package]
name = "ActixWebTaskService"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = "^0.8"
serde = "^1"
aws-config = "^0.8"
aws-sdk-dynamodb = "^0.8"
env_logger = "^0.8"
log = "^0.4"